--- a/PhotoDB/photodb/apps/photodb/templates/photodb/home.html
+++ b/PhotoDB/photodb/apps/photodb/templates/photodb/home.html
@@ -141,7 +141,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-3" v-for="(photo, index) in photos">
+                <div class="col-12 col-md-6 col-lg-3" v-cloak v-for="(photo, index) in photos">
 
                     <a href="#" v-if="!multiselect_mode" data-toggle="modal" data-target="#lightbox" @click="set_modal_photo(photo, index)">
                         <div class="thumbnail-container">
