Show medium sized photo on home screen

--- a/PhotoDB/photodb/apps/photodb/templates/photodb/home.html
+++ b/PhotoDB/photodb/apps/photodb/templates/photodb/home.html
@@ -40,7 +40,7 @@
                             <div class="modal-body">
                                 <div class="photo-nav">
                                     <i class="fa fa-chevron-left modal-nav" @click="prev_photo()"></i>
-                                    <img class="photo" :src="modal_photo.image" alt="">
+                                    <img class="photo" :src="modal_photo.medium" alt="">
                                     <i class="fa fa-chevron-right modal-nav" @click="next_photo()"></i>
                                 </div>
                             </div>
