--- a/PhotoDB/photodb/apps/photodb/templates/photodb/base.html
+++ b/PhotoDB/photodb/apps/photodb/templates/photodb/base.html
@@ -12,6 +12,7 @@
             integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" 
             crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'photodb/css/base.css' %}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>PhotoDB - {% block title %}{% endblock %}</title>
         {% block head %}{% endblock %}
     </head>
